config("spotify_json_config") {
  include_dirs = [ "include" ]
}

static_library("spotify_json") {
  public = [
    "include/spotify/json.hpp",
    "include/spotify/json/default_codec.hpp",
    "include/spotify/json/decode.hpp",
    "include/spotify/json/decode_exception.hpp",
    "include/spotify/json/decode_context.hpp",
    "include/spotify/json/encode.hpp",
    "include/spotify/json/encode_context.hpp",
    "include/spotify/json/encode_exception.hpp",
    "include/spotify/json/encoded_value.hpp",
    "include/spotify/json/json.hpp",
    "include/spotify/json/codec/any_codec.hpp",
    "include/spotify/json/codec/any_value.hpp",
    "include/spotify/json/codec/array.hpp",
    "include/spotify/json/codec/boolean.hpp",
    "include/spotify/json/codec/boost.hpp",
    "include/spotify/json/codec/cast.hpp",
    "include/spotify/json/codec/chrono.hpp",
    "include/spotify/json/codec/codec_interface.hpp",
    "include/spotify/json/codec/empty_as.hpp",
    "include/spotify/json/codec/enumeration.hpp",
    "include/spotify/json/codec/eq.hpp",
    "include/spotify/json/codec/ignore.hpp",
    "include/spotify/json/codec/map.hpp",
    "include/spotify/json/codec/null.hpp",
    "include/spotify/json/codec/number.hpp",
    "include/spotify/json/codec/object.hpp",
    "include/spotify/json/codec/omit.hpp",
    "include/spotify/json/codec/one_of.hpp",
    "include/spotify/json/codec/smart_ptr.hpp",
    "include/spotify/json/codec/string.hpp",
    "include/spotify/json/codec/transform.hpp",
    "include/spotify/json/codec/tuple.hpp",
  ]

  sources = [
    "include/spotify/json/detail/bitset.hpp",
    "include/spotify/json/detail/cpuid.hpp",
    "include/spotify/json/detail/decode_helpers.hpp",
    "include/spotify/json/detail/encode_helpers.hpp",
    "include/spotify/json/detail/encode_integer.hpp",
    "include/spotify/json/detail/escape.hpp",
    "include/spotify/json/detail/macros.hpp",
    "include/spotify/json/detail/skip_chars.hpp",
    "include/spotify/json/detail/skip_value.hpp",
    "include/spotify/json/detail/stack.hpp",
    "src/detail/encode_integer.cpp",
    "src/detail/escape.cpp",
    "src/detail/escape_common.hpp",
    "src/detail/skip_chars.cpp",
    "src/detail/skip_chars_common.hpp",
    "src/detail/skip_value.cpp",
    "src/detail/escape_sse42.cpp",
    "src/detail/skip_chars_sse42.cpp",
  ]

  public_configs = [ ":spotify_json_config" ]

  public_deps = [
    # TODO: allow the user to use $external/double-conversion
    "vendor/double-conversion",
  ]
}
